# peptidefi

./: .env.example  .gitignore  Anchor.toml  MIGRATION_FROM_BIOHACK.md  RAILWAY_DEPLOYMENT.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.test.json
apps/api/: .env.example  Dockerfile  package.json  railway.json
apps/cli/: README.md  package-lock.json  package.json
apps/oracle/: .env.example  Dockerfile  package.json  railway.json
apps/scraper/: .dockerignore  .env.example  Dockerfile  package.json  railway.json
apps/web/: .env.example  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
apps/worker/: .dockerignore  .env.example  Dockerfile  package.json  railway.json
biohash-promo/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
biohash-promo/src/: BioHashExplainer.tsx  CornerBrackets.tsx  Root.tsx  SectionShell.tsx  fonts.ts  theme.ts
delivery/biohash-pricing-reality/: README.md  camera.js  main.js  pricing-reality-scenes.js  pricing-reality.js
docs/: 01-overview.md  02-the-oracle.md  03-the-index-program.md  04-tokenised-peptides.md  05-the-api.md  06-the-cli.md  07-verifying-independently.md  08-for-integrators.md  09-roadmap.md  10-base-mirror.md  PUBLIC_API.md  README.md  glossary.md  operator-setup.md  oracle-authority.md
docs/follow-ups/: oral-vs-injectable-form-split.md  (+2 more)
programs/biohash-peg/: Cargo.toml  README.md
programs/biohash-peg/src/: errors.rs  events.rs  lib.rs
programs/biohash-peg/src/instructions/: burn.rs  create_token_metadata.rs  initialize_peg_state.rs  initialize_reserve_state.rs  mint.rs  mod.rs  update.rs
programs/biohash-peg/src/state/: mod.rs  peg_state.rs  reserve_state.rs
programs/biohash_index/: Cargo.toml
programs/biohash_index/src/: lib.rs
programs/biohash_index_lz_emitter/: Cargo.toml  README.md
programs/biohash_index_lz_emitter/scripts/: deploy.ts
programs/biohash_index_lz_emitter/src/: lib.rs
scripts/: backfill-cycle-onchain.ts  bbpc157-metadata.json  create-token-metadata.ts  initialize-peg-mainnet.ts  tsconfig.json
tests/: biohash-index-program.ts  biohash-peg.ts  tsconfig.json  utils.ts
(+181 files in other folders)
