[package]
name = "biohash-index-program"
version = "0.1.0"
description = "BioHash Peptide Index on-chain account program — V0.1."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "biohash_index_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
